@@ -2721,7 +2721,7 @@ DRIVER(bk2k,pa5)        //          04/89 W Black Knight 2000 (PA-5 Prototype)
 //First Game produced entirely by Williams after Merger to use Bally Name
 DRIVER(tsptr,l3)        //S11-2630: 07/89 B Transporter the Rescue (L-3)
 DRIVER(tsptr,l3fj)      //          07/25   Transporter the Rescue (L-3 Fixed Jackpot MOD)
-DRIVER(tsptr,lx4)       //          11/25   Transporter the Rescue (LX-4 Tournament MOD)
+DRIVER(tsptr,lx4)       //          12/25   Transporter the Rescue (LX-4 Tournament MOD)
 DRIVER(tsptr,lx4b)      //          11/25   Transporter the Rescue (LX-4 Tournament MOD clean)
 DRIVER(tsptr,lu3)       //          07/89 B Transporter the Rescue (LU-3)
 DRIVER(tsptr,l1)        //          06/89 B Transporter the Rescue (LA-1)
@@ -2729,7 +2729,7 @@ DRIVER(polic,l2)        //S11-573:  08/89 W Police Force (LA-2)
 DRIVER(polic,l3)        //          09/89 W Police Force (LA-3)
 DRIVER(polic,l4)        //          10/89 W Police Force (LA-4)
 DRIVER(polic,g4)        //          10/89 W Police Force (LG-4 German)
-DRIVER(polic,lx5)       //          12/25   Police Force (LX-5 MOD)
+DRIVER(polic,lx5)       //          12/25   Police Force (LX-5a MOD)
 DRIVER(eatpm,p7)        //S11-782:  09/89 B Elvira and the Party Monsters (PA-7 Prototype)
 DRIVER(eatpm,l1)        //          09/89 B Elvira and the Party Monsters (LA-1)
 DRIVER(eatpm,f1)        //          09/89 B Elvira and the Party Monsters (LF-1 French)
@@ -2788,6 +2788,7 @@ DRIVER(diner,g2)        //          06/90 W Diner (LG-2 German)
 DRIVER(diner,f2)        //          06/90 W Diner (LF-2 French)
 DRIVER(diner,l3)        //          06/90 W Diner (LA-3)
 DRIVER(diner,l4)        //          09/90 W Diner (LA-4)
+DRIVER(diner,l4fr)      //          12/25   Diner (LA-4 Fixed Right Ramp MOD)
 DRIVER(radcl,p3)        //S11-1904: 06/90 B Radical! (P-3)
 DRIVER(radcl,l1)        //          06/90 B Radical! (L-1)
 DRIVER(radcl,g1)        //          06/90 B Radical! (LG-1)
