@@ -52,11 +52,12 @@ Adventures of Rocky and Bullwinkle and Friends 1.03 (Italian), 1.10 (Belgian) (n
 Bad Cats LF-1 (French)
 Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
 Cue Ball Wizard (Spanish / Vifico license)
+Diner LA-4 (Fixed Right Ramp MOD)
 Gorgar L-2 (most likely official, but unreleased so far, makes it the newest version available)
 High Speed (G-4 aka German PROTO4)
 Maverick 4.04 (German, Display 4.00)
 Monte Carlo (German) (most likely older revision than existing one, see above)
-Police Force LX-5 (MOD)
+Police Force LX-5a (MOD)
 Rollergames TA-2 (LA-2C competition MOD based Tournament Edition)
 Rolling Stones V21 (unreleased so far, makes it the newest version available)
 Soccer Kings (alternate set 2)
